Packages/VECAD52/vecad52/VECAD/api_VecApi.bas


'/////////////////////////////////////////////////
'// Add Graphic objects to drawing
Public Declare Function vlAddPoint Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function vlAddLine Lib "vecad52.dll" (ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double) As Long
Public Declare Function vlAddArcEx Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Rh As Double, ByVal Rv As Double, ByVal Ang0 As Double, ByVal AngArc As Double, ByVal AngRot As Double) As Long
Public Declare Function vlAddCircle Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Rad As Double) As Long
Public Declare Function vlAddCircle3P Lib "vecad52.dll" (ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal X3 As Double, ByVal Y3 As Double) As Long
Public Declare Function vlAddArc Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Rad As Double, ByVal Ang1 As Double, ByVal Ang2 As Double) As Long
Public Declare Function vlAddArc3P Lib "vecad52.dll" (ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal X3 As Double, ByVal Y3 As Double) As Long
Public Declare Function vlAddEllipse Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Rh As Double, ByVal Rv As Double, ByVal Ang As Double) As Long
Public Declare Function vlSetTextParam Lib "vecad52.dll" (ByVal Mode As Long, ByVal Var As Double) As Boolean
Public Declare Function vlSetTextParams Lib "vecad52.dll" (ByVal Align As Long, ByVal H As Double, ByVal Ang As Double, ByVal ScaleW As Double, ByVal Oblique As Double, ByVal HInter As Double, ByVal VInter As Double) As Boolean
Public Declare Function vlAddText Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Text As String) As Long
Public Declare Function vlPolylineBegin Lib "vecad52.dll" () As Boolean
Public Declare Function vlVertex Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double) As Boolean
Public Declare Function vlVertexR Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Radius As Double) As Boolean
Public Declare Function vlVertexF Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal bOnCurve As Boolean) As Boolean
Public Declare Function vlVertexB Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Bulge As Double) As Boolean
Public Declare Function vlAddPolyline Lib "vecad52.dll" (ByVal SmoothType As Long, ByVal bClosed As Boolean) As Long
Public Declare Function vlAddBlockIns Lib "vecad52.dll" (ByVal Index As Long, ByVal X As Double, ByVal Y As Double, ByVal Ang As Double, ByVal Xscale As Double, ByVal Yscale As Double) As Long
Public Declare Function vlAddHatch Lib "vecad52.dll" (ByVal Index As Long, ByVal Scal As Double, ByVal Ang As Double) As Long
Public Declare Function vlAddRaster Lib "vecad52.dll" (ByVal FileName As String, ByVal X As Double, ByVal Y As Double, ByVal ResH As Double, ByVal ResV As Double) As Long
Public Declare Function vlAddRect Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal W As Double, ByVal H As Double, ByVal Ang As Double, ByVal Rad As Double) As Long
Public Declare Function vlAddDimHor Lib "vecad52.dll" (ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal Y As Double) As Long
Public Declare Function vlAddDimVer Lib "vecad52.dll" (ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal X As Double) As Long
Public Declare Function vlAddDimPar Lib "vecad52.dll" (ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal Off As Double) As Long
Public Declare Function vlAddDimAng Lib "vecad52.dll" (ByVal Xcen As Double, ByVal Ycen As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal Off As Double) As Long
Public Declare Function vlAddDimRad Lib "vecad52.dll" (ByVal Xcen As Double, ByVal Ycen As Double, ByVal Xrad As Double, ByVal Yrad As Double, ByVal Off As Double) As Long
Public Declare Function vlAddDimDiam Lib "vecad52.dll" (ByVal Xcen As Double, ByVal Ycen As Double, ByVal Xrad As Double, ByVal Yrad As Double) As Long
Public Declare Function vlAddDimOrd Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Xtxt As Double, ByVal Ytxt As Double, ByVal bYord As Boolean) As Long
Public Declare Function vlAddDwgIns Lib "vecad52.dll" (ByVal FileName As String, ByVal X As Double, ByVal Y As Double, ByVal Angle As Double, ByVal ScaleX As Double, ByVal ScaleY As Double, ByVal iPage As Long) As Long
Public Declare Function vlAddCustom Lib "vecad52.dll" (ByVal ObjType As Long, ByVal pData As Any, ByVal DataSize As Long, ByVal ElemSize As Long) As Boolean


'/////////////////////////////////////////////////
'// Drawing's storage
Public Declare Function vlFileNew Lib "vecad52.dll" (ByVal hwVec As Long, ByVal Template As String) As Long
Public Declare Function vlFileOpen Lib "vecad52.dll" (ByVal hwVec As Long, ByVal FileName As String) As Long
Public Declare Function vlFileLoad Lib "vecad52.dll" (ByVal Mode As Long, ByVal FileName As String) As Boolean
Public Declare Function vlFileSave Lib "vecad52.dll" (ByVal Mode As Long, ByVal FileName As String) As Boolean
Public Declare Function vlFileList Lib "vecad52.dll" (ByVal hwParent As Long) As Boolean
Public Declare Function vlFileLoadMem Lib "vecad52.dll" (ByVal pData As Any) As Boolean
Public Declare Function vlFileSaveMem Lib "vecad52.dll" (ByVal pData As Any, ByVal MaxSize As Long) As Long

'/////////////////////////////////////////////////
'// Select objects for edit functions
Public Declare Function vlGetEntity Lib "vecad52.dll" (ByVal Mode As Long, ByVal Prm1 As Long, ByVal Prm2 As Long) As Long
Public Declare Function vlGetBlockEntity Lib "vecad52.dll" (ByVal iBlock As Long, ByVal Counter As Long) As Long
Public Declare Function vlSelect Lib "vecad52.dll" (ByVal Sel As Boolean, ByVal Index As Long) As Boolean
Public Declare Function vlSelectByPoint Lib "vecad52.dll" (ByVal Sel As Boolean, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double) As Long
Public Declare Function vlSelectByRect Lib "vecad52.dll" (ByVal Sel As Boolean, ByVal Left As Double, ByVal Bottom As Double, ByVal Right As Double, ByVal Top As Double, ByVal Cross As Boolean) As Long
Public Declare Function vlSelectByPolygon Lib "vecad52.dll" (ByVal Sel As Boolean, Ver As VLPOINT, ByVal Nver As Long, ByVal Cross As Boolean) As Long
Public Declare Function vlSelectByPolyline Lib "vecad52.dll" (ByVal Sel As Boolean, Ver As VLPOINT, ByVal Nver As Long) As Long
Public Declare Function vlSelectByDist Lib "vecad52.dll" (ByVal Sel As Boolean, ByVal X As Double, ByVal Y As Double, ByVal Dist As Double, ByVal Cross As Boolean) As Long

'/////////////////////////////////////////////////
'// Edit functions
'// iObj - index of the object,
'// if iObj=-1 then operate with selected objects
Public Declare Function vlCbCut Lib "vecad52.dll" () As Boolean
Public Declare Function vlCbCopy Lib "vecad52.dll" () As Boolean
Public Declare Function vlCbPaste Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double) As Boolean
Public Declare Function vlCopy Lib "vecad52.dll" (ByVal iObj As Long, ByVal dx As Double, ByVal dy As Double) As Long
Public Declare Function vlMove Lib "vecad52.dll" (ByVal iObj As Long, ByVal dx As Double, ByVal dy As Double) As Boolean
Public Declare Function vlRotate Lib "vecad52.dll" (ByVal iObj As Long, ByVal X As Double, ByVal Y As Double, ByVal Ang As Double) As Boolean
Public Declare Function vlScale Lib "vecad52.dll" (ByVal iObj As Long, ByVal X As Double, ByVal Y As Double, ByVal Scal As Double) As Boolean
Public Declare Function vlMirror Lib "vecad52.dll" (ByVal iObj As Long, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double) As Boolean
Public Declare Function vlErase Lib "vecad52.dll" (ByVal iObj As Long) As Boolean
Public Declare Function vlExplode Lib "vecad52.dll" (ByVal iObj As Long) As Boolean
Public Declare Function vlJoin Lib "vecad52.dll" (ByVal Delta As Double) As Boolean
Public Declare Function vlUndo Lib "vecad52.dll" () As Boolean
Public Declare Function vlRedo Lib "vecad52.dll" () As Boolean
Public Declare Function vlPolyVerInsert Lib "vecad52.dll" (ByVal iEnt As Long, ByVal iVer As Long) As Boolean
Public Declare Function vlPolyVerDelete Lib "vecad52.dll" (ByVal iEnt As Long, ByVal iVer As Long) As Boolean
Public Declare Function vlPolyVerGet Lib "vecad52.dll" (ByVal iEnt As Long, ByVal iVer As Long, ByRef pX As Double, ByRef pY As Double, ByRef pPrm As Double) As Boolean
Public Declare Function vlPolyVerSet Lib "vecad52.dll" (ByVal iEnt As Long, ByVal iVer As Long, ByVal X As Double, ByVal Y As Double, ByVal Prm As Double) As Boolean
Public Declare Function vlGripGet Lib "vecad52.dll" (ByVal iObj As Long, ByVal iGrip As Long, ByRef X As Double, ByRef Y As Double)
Public Declare Function vlGripSet Lib "vecad52.dll" (ByVal iObj As Long, ByVal iGrip As Long, ByVal X As Double, ByVal Y As Double)
Public Declare Function vlGripMove Lib "vecad52.dll" (ByVal iObj As Long, ByVal iGrip As Long, ByVal dx As Double, ByVal dy As Double) As Boolean

'/////////////////////////////////////////////////
'// Access to objects properties
Public Declare Function vlPropGet Lib "vecad52.dll" (ByVal Key As Long, ByVal iObj As Long, ByVal pData As Any) As Long
Public Declare Function vlPropGetInt Lib "vecad52.dll" (ByVal Key As Long, ByVal iObj As Long) As Long
Public Declare Function vlPropGetDbl Lib "vecad52.dll" (ByVal Key As Long, ByVal iObj As Long) As Double
Public Declare Function vlPropPut Lib "vecad52.dll" (ByVal Key As Long, ByVal iObj As Long, ByVal pData As Any) As Long
Public Declare Function vlPropPutInt Lib "vecad52.dll" (ByVal Key As Long, ByVal iObj As Long, ByVal Data As Long) As Long
Public Declare Function vlPropPutDbl Lib "vecad52.dll" (ByVal Key As Long, ByVal iObj As Long, ByVal Data As Double) As Long

'/////////////////////////////////////////////////
'// Zooming drawing in a window
Public Declare Function vlZoom Lib "vecad52.dll" (ByVal Scal As Double) As Boolean
Public Declare Function vlZoomRect Lib "vecad52.dll" (ByVal Left As Double, ByVal Bottom As Double, ByVal Right As Double, ByVal Top As Double) As Boolean
Public Declare Function vlZoomPan Lib "vecad52.dll" (ByVal dx As Double, ByVal dy As Double) As Boolean

'/////////////////////////////////////////////////
'// Coordinates convertions
Public Declare Function vlCoordWinToDwg Lib "vecad52.dll" (ByVal Xwin As Long, ByVal Ywin As Long, ByRef pXdwg As Double, ByRef pYdwg As Double) As Boolean
Public Declare Function vlCoordDwgToWin Lib "vecad52.dll" (ByVal Xdwg As Double, ByVal Ydwg As Double, ByRef pXwin As Long, ByRef pYwin As Long) As Boolean
Public Declare Function vlLenWinToDwg Lib "vecad52.dll" (ByVal Lwin As Long, ByRef pLdwg As Double) As Boolean
Public Declare Function vlLenDwgToWin Lib "vecad52.dll" (ByVal Ldwg As Double, ByRef pLwin As Long) As Boolean

